# client-headless

./: .commitlintrc.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  memories.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: docs-writer.md  java-reference.md  reviewer.md  rust-engineer.md  tester.md  vanilla-auditor.md
.github/prompts/: phase-implement.prompt.md  phase-review.prompt.md  vanilla-compliance-audit.prompt.md
.github/workflows/: cargo-publish-dev.yml  cargo-publish.yml  ci.yml  release-please.yml  security.yml
crates/headlesscraft/: Cargo.toml
crates/headlesscraft-client/: Cargo.toml
crates/headlesscraft-client/src/: lib.rs
crates/headlesscraft-macros/: Cargo.toml
crates/headlesscraft-macros/src/: lib.rs
crates/headlesscraft-nbt/: Cargo.toml
crates/headlesscraft-nbt/src/: lib.rs
crates/headlesscraft-protocol/: Cargo.toml
crates/headlesscraft-protocol/src/: lib.rs
crates/headlesscraft-types/: Cargo.toml
crates/headlesscraft-types/src/: lib.rs
crates/headlesscraft-world/: Cargo.toml
crates/headlesscraft-world/src/: lib.rs
crates/headlesscraft/src/: lib.rs
crates/oxidized-client-headless/: Cargo.toml
crates/oxidized-client-headless-macros/: Cargo.toml
crates/oxidized-client-headless-macros/src/: lib.rs
crates/oxidized-client-headless-protocol/: Cargo.toml
crates/oxidized-client-headless-protocol/src/: lib.rs
crates/oxidized-client-headless/src/: lib.rs
docs/: README.md
docs/adr/: README.md  adr-001-crate-architecture.md  adr-002-error-handling.md  adr-003-async-runtime.md  adr-004-logging-observability.md  adr-005-packet-codec.md  adr-006-connection-lifecycle.md  adr-007-encryption-compression.md  adr-008-nbt-design.md  adr-009-authentication.md  adr-010-client-world-state.md  adr-011-event-system.md  adr-012-multi-client.md  adr-013-testing-strategy.md
docs/architecture/: overview.md
docs/lifecycle/: README.md  quality-gates.md
docs/phases/: README.md
docs/reference/: README.md  data-formats.md  protocol-packets.md
src/: lib.rs
tools/: setup-ref.sh
