[package]
name        = "oxidized-client-headless"
description = "A Rust framework for headless Minecraft Java Edition clients — bots, testing, and automation"
version     = "0.1.0" # x-release-please-version
edition     = "2024"
authors     = ["Dogukan Metan <dogukanmetan@gmail.com>"]
license     = "MIT"
repository  = "https://github.com/oxidized-mc/client-headless"
homepage    = "https://github.com/oxidized-mc/client-headless"
rust-version = "1.85"

[dependencies]
# Shared oxidized-mc crate ecosystem
oxidized-nbt         = "0.1.0-dev"
oxidized-codec       = "0.1.0-dev"
oxidized-mc-types    = "0.1.0-dev"
oxidized-chat        = "0.1.0-dev"
oxidized-crypto      = "0.1.0-dev"
oxidized-compression = "0.1.0-dev"
oxidized-transport   = "0.1.0-dev"
oxidized-auth        = "0.1.0-dev"
oxidized-types       = "0.1.0-dev"
oxidized-registry    = "0.1.0-dev"

# Async runtime
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["codec"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1", features = ["preserve_order"] }
bytes       = "1"

# Logging/tracing
tracing     = "0.1"

# Networking
reqwest     = { version = "0.13", features = ["json"] }
urlencoding = "2"
uuid        = { version = "1", features = ["v3", "v4", "serde"] }

# Error handling
thiserror   = "2"

# Data structures
ahash       = "0.8"
parking_lot = "0.12"
dashmap     = "6"
glam        = "0.32"

[dev-dependencies]
anyhow             = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
proptest           = "1"
insta              = { version = "1", features = ["toml"] }
tempfile           = "3"
serial_test        = "3"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "debuginfo"

[profile.dev]
opt-level = 1

[profile.bench]
inherits  = "release"
debug     = true

[lints.rust]
missing_docs       = "warn"
unsafe_code        = "deny"
unused_imports     = "warn"

[lints.clippy]
# Correctness — hard errors
correctness        = { level = "deny", priority = -1 }
# Performance and style — warnings
perf               = { level = "warn", priority = -1 }
style              = { level = "warn", priority = -1 }
complexity         = { level = "warn", priority = -1 }
suspicious         = { level = "warn", priority = -1 }
# Specific useful lints
unwrap_used        = "deny"
expect_used        = "deny"
panic              = "deny"
print_stdout       = "deny"
print_stderr       = "deny"
needless_pass_by_value = "warn"
redundant_clone    = "warn"
# Noisy lints intentionally suppressed
module_name_repetitions = "allow"
must_use_candidate      = "allow"
cast_possible_truncation = "allow"
cast_sign_loss           = "allow"
cast_possible_wrap       = "allow"

[patch.crates-io]
oxidized-auth = { path = "../auth" }
oxidized-chat = { path = "../chat" }
oxidized-codec = { path = "../codec" }
oxidized-compression = { path = "../compression" }
oxidized-crypto = { path = "../crypto" }
oxidized-mc-types = { path = "../mc-types" }
oxidized-nbt = { path = "../nbt" }
oxidized-registry = { path = "../registry" }
oxidized-transport = { path = "../transport" }
oxidized-types = { path = "../types" }
