[package]
name        = "headlesscraft-client"
description = "Core client logic, connection management, and bot API for HeadlessCraft"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
headlesscraft-types    = { workspace = true }
headlesscraft-nbt      = { workspace = true }
headlesscraft-protocol = { workspace = true }
headlesscraft-world    = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
uuid        = { workspace = true }
reqwest     = { workspace = true }
urlencoding = { workspace = true }
ahash       = { workspace = true }
parking_lot = { workspace = true }
dashmap     = { workspace = true }
glam        = { workspace = true }

[dev-dependencies]
proptest    = { workspace = true }
insta       = { workspace = true }
tempfile    = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true
