[package]
name        = "headlesscraft-nbt"
description = "NBT (Named Binary Tag) serialization library for HeadlessCraft"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
bytes     = { workspace = true }
flate2    = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
tempfile  = { workspace = true }

[lints]
workspace = true
