[package]
name        = "headlesscraft"
description = "A Rust framework for headless Minecraft Java Edition clients — bots, testing, and automation"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true

[dependencies]
headlesscraft-protocol = { workspace = true }
headlesscraft-macros   = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
bytes       = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
reqwest     = { workspace = true }
urlencoding = { workspace = true }
ahash       = { workspace = true }
parking_lot = { workspace = true }
dashmap     = { workspace = true }
glam        = { workspace = true }

[dev-dependencies]
anyhow      = { workspace = true }
tracing-subscriber = { workspace = true }
proptest    = { workspace = true }
insta       = { workspace = true }
tempfile    = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true
