[package]
name        = "oxidized-client-headless-protocol"
description = "Minecraft Java Edition protocol codec, packet definitions, and NBT for oxidized-client-headless"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
oxidized-client-headless-macros = { workspace = true }

# Serialization & types
bytes       = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
indexmap     = { workspace = true }
uuid        = { workspace = true }
glam        = { workspace = true }
tracing     = { workspace = true }
bitflags    = { workspace = true }

[dev-dependencies]
proptest    = { workspace = true }
insta       = { workspace = true }
tempfile    = { workspace = true }

[lints]
workspace = true
